--- a/doc.tex
+++ b/doc.tex
@@ -1,20 +1,33 @@
 \documentclass{kurreport}
 \usepackage{mwe}
 
-\address{123 Main St.}
-        {City, State}
-        {ZIP}
-\phone{(777) 777-7777}
-\fax{(777) 777-7777}
-\webaddress{tex.stackexchange.com}
+% \address{123 Main St.}
+%         {City, State}
+%         {ZIP}
+% \phone{(777) 777-7777}
+% \fax{(777) 777-7777}
+% \webaddress{tex.stackexchange.com}
+%
+% \preparedfor{--prepared--}
+% \poreference{--PO--}
+% \projectnumber{--project-number--}
+% \testreportnumber{--test-report-number--}
+% \logoimage{example-image-a}
 
-\title{TEST REPORT}
-\preparedfor{--prepared--}
-\poreference{--PO--}
-\projectnumber{--project-number--}
-\testreportnumber{--test-report-number--}
-\logoimage{example-image-a}
-
+%preamble
+\providecommand\No{\char"2116}%{№}%
+\title{КР.000000.000000.00.ПЗ}
 \begin{document}
+
+\input{title.tex}
+\setcounter{page}{2}
+
 \lipsum[1-20]
+\newpage
+\BGfrom{\thepage}
+hello!
+
+лодожожодол
+
+\lipsum[1-1500]
 \end{document}
