--- a/kurreport.cls
+++ b/kurreport.cls
@@ -5,6 +5,17 @@
 \ProcessOptions*
 \LoadClass{report}
 
+\RequirePackage{mathtext}
+\RequirePackage[utf8]{inputenc}
+\usepackage[english,russian]{babel}
+\RequirePackage{indentfirst}
+\RequirePackage{misccorr}
+\RequirePackage{graphicx}
+\RequirePackage{amsmath}
+\RequirePackage{luatextra}
+\setmainfont{Times New Roman}
+\setmonofont{Courier New}
+
 \RequirePackage{tikz}
 \usetikzlibrary{calc}
 \RequirePackage[abspath]{currfile}
@@ -12,155 +23,156 @@
 \RequirePackage{everypage}
 \RequirePackage{marvosym}
 
-\def\address#1#2#3{%
-  \gdef\@addressA{#1}%
-  \gdef\@addressB{#2}%
-  \gdef\@addressC{#3}}
-\def\phone#1{%
-  \gdef\@phone{#1}}
-\def\fax#1{%
-  \gdef\@fax{#1}}
-\def\webaddress#1{%
-  \gdef\@webaddress{#1}}
-
-\def\preparedfor#1{%
-  \gdef\@prepared@for{#1}}
-\def\poreference#1{%
-  \gdef\@po@reference{#1}}
-\def\projectnumber#1{%
-  \gdef\@project@number{#1}}
-\def\testreportnumber#1{%
-  \gdef\@test@report@number{#1}}
-\def\logoimage#1{%
-  \gdef\@logoimage{#1}}
-
-\def\phonesymbol#1{%
-  \gdef\@symbol@phone{#1}}
-\def\faxsymbol#1{%
-  \gdef\@symbol@fax{#1}}
-\def\webaddresssymbol#1{%
-  \gdef\@symbol@webaddress{#1}}
-
-\def\@symbol@phone{\Telefon}
-\def\@symbol@fax{\Faxmachine}
-\def\@symbol@webaddress{\Lightning}
-
+%\ExecuteOptions{letterpaper,10pt,oneside,onecolumn,final,openany}
 \tikzset{
-  report blue/.style={
-    color=black,
-  },
-  report gray/.style={
+  report black/.style={
     color=black,
   },
   report frame/.style={
     thick,
-    report blue,
+    report black,
+	line width=.7mm,
+  },
+  report thin/.style={
+    thick,
+    report black,
   },
 }
 
+\AtBeginDocument{}
+
 \AddEverypageHook{%
-  \begin{tikzpicture}[remember picture, overlay]
-      \coordinate (top left)     at ($ (current page.north west) + (2cm,  -.5cm) $);
-      \coordinate (top right)    at ($ (current page.north east) + (-0.5cm, -.5cm) $);
-      \coordinate (bottom left)  at ($ (current page.south west) + (2cm,  .5cm) $);
-      \coordinate (bottom right) at ($ (current page.south east) + (-.5cm, .5cm) $);
-%      
-      \coordinate (frame top left)     at ($ (top left)  - (0, 2.5cm) $);
-      \coordinate (frame top right)    at ($ (top right) - (0, 2.5cm) $);
-      \coordinate (frame bottom left)  at ($ (bottom left)  + (0, .5cm)$);
-      \coordinate (frame bottom right) at ($ (bottom right) + (0, .5cm)$);
-%
-      \coordinate (frame title mid left)  at ($ (frame top left)  + (1cm,  0) $);
-      \coordinate (frame title mid right) at ($ (frame top right) + (-1cm, 0) $);
-      \coordinate (frame title top left)  at ($ (frame title mid left) + (0, 3mm) $);
-      \coordinate (frame title top right) at ($ (frame title mid right) + (0, 3mm) $);
-      \coordinate (frame title bottom left)  at ($ (frame title mid left) - (0, 10mm) $);
-      \coordinate (frame title bottom right) at ($ (frame title mid right) - (0, 10mm) $);
-%
-%      \node [opacity=0.5] at (top left)  [below right]
-%      {%
-%        \includegraphics[width=2cm]{\@logoimage}%
-%      };
-%      \node [report blue] at ($ (top left) + (0cm, -1.9cm) $) [right]
-%      {%
-%        \sffamily TEST REPORT%
-%      };
-%      \node [report blue] at ($ (top right) + (3mm, -2mm) $) [below left]
-%      {%
-%        \sffamily
-%        \footnotesize
-%        \begin{tabular}{lcl}
-%          Address Information. &                               \\[.5ex]
-%          \@addressA           & \@symbol@phone      & \@phone \\  %marvosym
-%          \@addressB           & \@symbol@fax        & \@fax   \\ %marvosym
-%          \@addressC           & \@symbol@webaddress & \@webaddress
-%        \end{tabular}
-%      };
-%      \node [opacity=0.5, report blue] at ($ (frame bottom left) - (3mm, 0) $) [below right]
-%      {%
-%        \begin{tabular}{l}
-%          \sffamily
-%          \footnotesize
-%          COMPANY CONFIDENTIAL \\[-1ex]
-%          \scriptsize\ttfamily
-%          \currfileabspath
-%        \end{tabular}
-%      };
-%      \node [opacity=0.5, report blue] at ($ (frame bottom right) + (2mm - 2pt, 0) $) [below left]
-%      {%
-%        \sffamily
-%        \footnotesize
-%        Page \thepage\ of \pageref{LastPage}
-%      };
-%      \node [report gray] at ($ (frame top right)!.5!(frame top left) $) [below]
-%      {%
-%        \sffamily
-%        \@title
-%      };
-%      \node [report gray] at ($ (frame title bottom left) - (3mm, 0) $) [below right]
-%      {%
-%        \sffamily
-%        \footnotesize
-%        \begin{tabular}{rl}
-%          Prepared for: & \@prepared@for \\
-%          PO Reference: & \@po@reference
-%        \end{tabular}
-%      };
-%      \node [report gray] at ($ (frame title bottom right) + (3mm, 0) $) [below left]
-%      {%
-%        \sffamily
-%        \footnotesize
-%        \begin{tabular}{rr}
-%          Project Number: & \@project@number \\
-%          Test Report Number: & \@test@report@number
-%        \end{tabular}
-%      };
-%%
-%      \draw[report frame]
-%        (frame bottom left) --
-%        (frame bottom right);
-%      \draw[report frame]
-%        (frame bottom left) --
-%        (frame top left) --
-%        (frame title mid left);
-%      \draw[report frame]
-%        (frame bottom right) --
-%        (frame top right) --
-%        (frame title mid right);
-%      \draw[report frame]
-%        (frame title top left) rectangle (frame title bottom right);
-      \draw[report frame]
-        (bottom right) --
-        (top right) --
-        (top left) --
-		(bottom left) --
-		(bottom right);
-    \end{tikzpicture}
-  }
+	\ifnum\value{page}>1
+		\ifnum\value{page}<3
+			\begin{tikzpicture}[remember picture, overlay]
+				\coordinate (top left)     at ($ (current page.north west) + (2cm,  -.5cm) $);
+				\coordinate (top right)    at ($ (current page.north east) + (-.5cm, -.5cm) $);
+				\coordinate (bottom left)  at ($ (current page.south west) + (2cm,  .5cm) $);
+				\coordinate (bottom right) at ($ (current page.south east) + (-.5cm, .5cm) $);%
+				%plases
+				\node [report black] at ($ (bottom left) + (12cm, .7cm) $) {\large{\@title}};
+				\node [report black] at ($ (bottom right) + (-1cm, 12mm) $) [right] {Лист};
+				\node [report black] at ($ (bottom right) + (-5mm, 4mm) $) {\large{\thepage}};
+				\node [report black] at ($ (bottom left) + (0cm, 25mm) $) [right] {Изм.};
+				\node [report black] at ($ (bottom left) + (1cm, 25mm) $) [right] {Лист};
+				\node [report black] at ($ (bottom left) + (2.5cm, 20mm) $) [right] {\No докум.};
+				\node [report black] at ($ (bottom left) + (4.5cm, 25mm) $) [right] {Подпись};
+				\node [report black] at ($ (bottom left) + (6cm, 25mm) $) [right] {Дата};%
+				%borders
+				\draw[report frame]
+					(bottom right) --
+					(top right) --
+					(top left) --
+					(bottom left) --
+					(bottom right) --
+					(top right);
+				\draw[report frame]
+					($ (bottom left) + (0cm, 40mm) $) --
+					($ (bottom right) + (0cm, 40mm) $);
+				\draw[report frame]
+					($ (bottom left) + (0cm, 25mm) $) --
+					($ (bottom right) + (0cm, 25mm) $);
+				\draw[report frame]
+					($ (bottom left) + (1cm, 25mm) $) --
+					($ (bottom left) + (1cm, 40mm) $);
+				\draw[report frame]
+					($ (bottom left) + (2cm, 0mm) $) --
+					($ (bottom left) + (2cm, 40mm) $);
+				\draw[report frame]
+					($ (bottom left) + (4.5cm, 0mm) $) --
+					($ (bottom left) + (4.5cm, 40mm) $);
+				\draw[report frame]
+					($ (bottom left) + (6cm, 0mm) $) --
+					($ (bottom left) + (6cm, 40mm) $);
+				\draw[report frame]
+					($ (bottom left) + (7cm, 0mm) $) --
+					($ (bottom left) + (7cm, 40mm) $);
+				\draw[report thin]
+					($ (bottom left) + (0cm, 30mm) $) --
+					($ (bottom left) + (7cm, 30mm) $);
+				\draw[report thin]
+					($ (bottom left) + (0cm, 35mm) $) --
+					($ (bottom left) + (7cm, 35mm) $);
+				\draw[report thin]
+					($ (bottom left) + (0cm, 25mm) $) --
+					($ (bottom left) + (7cm, 25mm) $);
+				\draw[report thin]
+					($ (bottom left) + (0cm, 20mm) $) --
+					($ (bottom left) + (7cm, 20mm) $);
+				\draw[report thin]
+					($ (bottom left) + (0cm, 15mm) $) --
+					($ (bottom left) + (7cm, 15mm) $);
+				\draw[report thin]
+					($ (bottom left) + (0cm, 10mm) $) --
+					($ (bottom left) + (7cm, 10mm) $);
+				\draw[report thin]
+					($ (bottom left) + (0cm, 5mm) $) --
+					($ (bottom left) + (7cm, 5mm) $);
+			\end{tikzpicture}
+		\fi
+	\fi
+}
+
+\newcommand\BGfrom[1]{%
+	\AddEverypageHook{%
+		\ifnum\value{page}>\numexpr#1-1\relax
+			\begin{tikzpicture}[remember picture, overlay]
+				\coordinate (top left)     at ($ (current page.north west) + (2cm,  -.5cm) $);
+				\coordinate (top right)    at ($ (current page.north east) + (-.5cm, -.5cm) $);
+				\coordinate (bottom left)  at ($ (current page.south west) + (2cm,  .5cm) $);
+				\coordinate (bottom right) at ($ (current page.south east) + (-.5cm, .5cm) $);%
+				%plases
+				\node [report black] at ($ (bottom left) + (12cm, .7cm) $) {\large{\@title}};
+				\node [report black] at ($ (bottom right) + (-1cm, 1.2cm) $) [right] {Лист};
+				\node [report black] at ($ (bottom right) + (-5mm, 4mm) $) {\large{\thepage}};
+				\node [report black] at ($ (bottom left) + (0cm, .25cm) $) [right] {Изм.};
+				\node [report black] at ($ (bottom left) + (1cm, .25cm) $) [right] {Лист};
+				\node [report black] at ($ (bottom left) + (2.5cm, .2cm) $) [right] {\No докум.};
+				\node [report black] at ($ (bottom left) + (4.5cm, .25cm) $) [right] {Подпись};
+				\node [report black] at ($ (bottom left) + (6cm, .25cm) $) [right] {Дата};%
+				%borders
+				\draw[report frame]
+					(bottom right) --
+					(top right) --
+					(top left) --
+					(bottom left) --
+					(bottom right) --
+					(top right);
+				\draw[report frame]
+					($ (bottom left) + (0cm, 15mm) $) --
+					($ (bottom right) + (0cm, 15mm) $);
+				\draw[report frame]
+					($ (bottom left) + (1cm, 0mm) $) --
+					($ (bottom left) + (1cm, 15mm) $);
+				\draw[report frame]
+					($ (bottom left) + (2cm, 0mm) $) --
+					($ (bottom left) + (2cm, 15mm) $);
+				\draw[report frame]
+					($ (bottom left) + (4.5cm, 0mm) $) --
+					($ (bottom left) + (4.5cm, 15mm) $);
+				\draw[report frame]
+					($ (bottom left) + (6cm, 0mm) $) --
+					($ (bottom left) + (6cm, 15mm) $);
+				\draw[report frame]
+					($ (bottom left) + (7cm, 0mm) $) --
+					($ (bottom left) + (7cm, 15mm) $);
+				\draw[report frame]
+					($ (bottom right) + (-1cm, 0mm) $) --
+					($ (bottom right) + (-1cm, 15mm) $);
+				\draw[report thin]
+					($ (bottom left) + (0cm, 5mm) $) --
+					($ (bottom left) + (7cm, 5mm) $);
+				\draw[report thin]
+					($ (bottom left) + (0cm, 10mm) $) --
+					($ (bottom left) + (7cm, 10mm) $);
+				\draw[report thin]
+					($ (bottom right) + (0cm, 10mm) $) --
+					($ (bottom right) + (-1cm, 10mm) $);
+			\end{tikzpicture}
+		\fi
+	}
+}
 
 \pagestyle{empty}
-
-%\RequirePackage[top=5.5cm,
-%               left=2cm,
-%              right=2cm,
-%             bottom=2cm]{geometry}
+\RequirePackage[left=3cm,right=1cm,
+    top=1.5cm,bottom=2cm,bindingoffset=0cm]{geometry}
