Second frame done

--- a/doc.tex
+++ b/doc.tex
@@ -1,5 +1,7 @@
 \documentclass{kurreport}
 \usepackage{mwe}
+%выполнил
+%руководитель
 
 % \address{123 Main St.}
 %         {City, State}
@@ -14,17 +16,18 @@
 % \testreportnumber{--test-report-number--}
 % \logoimage{example-image-a}
 
+
 %preamble
 \providecommand\No{\char"2116}%{№}%
-\title{КР.000000.000000.00.ПЗ}
+\title{КР.430200.09.03.01.ПЗ}
 \begin{document}
 
 \input{title.tex}
+\BGfrom{\thepage}
 \setcounter{page}{2}
 
-\lipsum[1-20]
+\lipsum[1-5]
 \newpage
-\BGfrom{\thepage}
 hello!
 
 лодожожодол
