--- a/doc.tex
+++ b/doc.tex
@@ -1,36 +1,16 @@
 \documentclass{kurreport}
-\usepackage{mwe}
-%выполнил
-%руководитель
-
-% \address{123 Main St.}
-%         {City, State}
-%         {ZIP}
-% \phone{(777) 777-7777}
-% \fax{(777) 777-7777}
-% \webaddress{tex.stackexchange.com}
-%
-% \preparedfor{--prepared--}
-% \poreference{--PO--}
-% \projectnumber{--project-number--}
-% \testreportnumber{--test-report-number--}
-% \logoimage{example-image-a}
-
-
 %preamble
-\providecommand\No{\char"2116}%{№}%
 \title{КР.430200.09.03.01.ПЗ}
+\providecommand\mytitle{КР. 430200. 09.03.01.ПЗ}
+
 \begin{document}
+\BGfrom{\thepage}
 
 \input{title.tex}
-\BGfrom{\thepage}
+
 \setcounter{page}{2}
-
 \lipsum[1-5]
+
 \newpage
-hello!
-
-лодожожодол
-
 \lipsum[1-1500]
 \end{document}
