--- a/title.tex
+++ b/title.tex
@@ -3,45 +3,33 @@
 	\begin{center}
 		ФЕДЕРАЛЬНОЕ АГЕНСТВО ЖЕЛЕЗНОДОРОЖНОГО ТАРНСПОРТА \\
 		\vspace{14pt}
-		Федерально бюджетное государственное образовательное учереждение высшего образования \\
-		\vspace{14pt}
+		Федерально государственное бюджетное образовательное учреждение \\ высшего образования \\
 		<<Иркутский государственный университет путей и сообщения>> \\
 		(ФГБОУ ВО ИрГУПС) \\
-		%\hrulefill
+		\vspace{28pt}
+		Факультет <<Управление на транспорте и информационнные технологии>> \\
+		Кафедра <<Информационные системы и защита информации>>
 	\end{center}
-
-	\vspace{14pt}
-
-	\center{Факуультет управление на транспорте и информационнные технологии}
-	\center{Кафедра <<Информационные системы и защита информации>>}
-
 	\vspace{28pt}
-
 	\begin{center}
-		МАРКЕТИНГОВОЕ ИССЛЕДОВАНИЕ (СРАВНИТЕЛЬНЫЙ АНАЛИЗ)
+		????????????????????????????????????????
 	\end{center}
-
-	\vspace{56pt}
-
+	\vspace{-14pt}
 	\begin{center}
-		Лаболаторная работа {\No} 1 \\
-		\vspace{14pt}
-		<<Методология оценки стоимости проектов программно-информационных систем>> \\
+		Курсовая работа \\
+	\vspace{14pt}
+		\mytitle
 	\end{center}
-
 	\vspace{56pt}
-
 	\begin{flushleft}
 		\begin{tabular}{p{0.57\textwidth}l}
-			Выполнил: &  Проверил: \\
-			магистрант группы ПИм.1-16-1 &  к. н к., доцент \\
-			Арляпов С.В. &  Маринов А.А. \\
+			Выполнил					&  Проверил 			\\
+			магистрант гр. ПИм.1-16-1	&  к. ф-м. н., доцент	\\
+			Арляпов С.В.				&  Шлаустас Р.Ю.		\\
 		\end{tabular}
 	\end{flushleft}
-
 	\vspace{\fill}
-
 	\begin{center}
-	Иркутск \\ 2017
+		Иркутск \\ 2017
 	\end{center}
 \end{titlepage}
