--- a/doc.tex
+++ b/doc.tex
@@ -9,8 +9,12 @@
 \input{title.tex}
 
 \setcounter{page}{2}
-\lipsum[1-5]
+\tableofcontents
+\thispagestyle{empty}
 
-\newpage
+\chapter{First chapter}
+\section{First section}
+\subsection{First subsection}
+\subsubsection{First subsubsection}
 \lipsum[1-1500]
 \end{document}
