--- a/doc.tex
+++ b/doc.tex
@@ -2,19 +2,17 @@
 %preamble
 \title{КР.430200.09.03.01.ПЗ}
 \providecommand\mytitle{КР. 430200. 09.03.01.ПЗ}
+\providecommand\kurtitle{The kur title will be setted}
 
 \begin{document}
-\BGfrom{\thepage}
-
 \input{title.tex}
-
-\setcounter{page}{2}
-\tableofcontents
-\thispagestyle{empty}
-
-\chapter{First chapter}
-\section{First section}
-\subsection{First subsection}
-\subsubsection{First subsubsection}
-\lipsum[1-1500]
+\input{introduction.tex}
+\input{task.tex}
+\input{offer.tex}
+\input{project.tex}
+\input{spec.tex}
+\input{schemes.tex}
+\input{drawings.tex}
+\input{picture.tex}
+\input{conclusion.tex}
 \end{document}
