--- a/kurreport.cls
+++ b/kurreport.cls
@@ -23,18 +23,27 @@
 \RequirePackage{everypage}
 \RequirePackage{marvosym}
 \RequirePackage{mwe}
+\RequirePackage{longtable}
+\RequirePackage{booktabs}
+\usepackage{tabularx}
+\usepackage{gensymb}
+\usepackage[nooneline]{caption}
+\captionsetup[figure]{justification=centerfirst}
+\captionsetup[table]{justification=raggedright}
+
 
 \RequirePackage[left=3cm,right=1cm,
-    top=1.5cm,bottom=2cm,bindingoffset=0cm]{geometry}
+    top=1.5cm,bottom=2.2cm,bindingoffset=0cm]{geometry}
 \usepackage{scrextend}
 \changefontsizes[14pt]{14pt}
 
 \providecommand\No{\char"2116}%{№}%"
 
 \usepackage{titlesec}
+\usepackage{afterpage}
 \addto\captionsrussian{\renewcommand\contentsname{\vspace{-70pt}\Large{Содержание}\vspace{-42pt}}}
 \setcounter{secnumdepth}{3}
-\setcounter{tocdepth}{3}
+\setcounter{tocdepth}{2}
 \titleformat{\chapter}[hang]
 	{\vspace{-70pt}\bfseries\Large}{\thechapter\ }{0pt}{}[\vspace{-28pt}]
 \titleformat{\section}[hang]
@@ -45,9 +54,11 @@
 	{\normalsize}{\thesubsubsection\ }{0pt}{}
 
 \usepackage{titletoc,tocloft}
-\setlength{\cftsecindent}{0cm}
-\setlength{\cftsubsecindent}{0cm}
-\setlength{\cftsubsubsecindent}{0cm}
+\setlength{\cftsecindent}{0.5cm}
+\setlength{\cftsubsecindent}{1cm}
+\setlength{\cftsubsubsecindent}{1.5cm}
+
+\renewcommand{\cftsecaftersnum}{.}
 
 \tikzset{
   report black/.style={
@@ -171,65 +182,63 @@
 	\fi
 }
 
-\newcommand\BGfrom[1]{%
-	\AddEverypageHook{%
-		\ifnum\value{page}>2
-		\thispagestyle{empty}
-			\begin{tikzpicture}[remember picture, overlay]
-				\coordinate (top left)     at ($ (current page.north west) + (2cm,  -.5cm) $);
-				\coordinate (top right)    at ($ (current page.north east) + (-.5cm, -.5cm) $);
-				\coordinate (bottom left)  at ($ (current page.south west) + (2cm,  .5cm) $);
-				\coordinate (bottom right) at ($ (current page.south east) + (-.5cm, .5cm) $);%
-				%plases
-				\node [report black] at ($ (bottom left) + (12cm, .7cm) $) {\large{\@title}};
-				\node [report black] at ($ (bottom right) + (-1cm, 1.2cm) $) [right] {Лист};
-				\node [report black] at ($ (bottom right) + (-5mm, 4mm) $) {\normalsize{\thepage}};
-				\node [report black] at ($ (bottom left) + (0cm, .25cm) $) [right] {Изм.};
-				\node [report black] at ($ (bottom left) + (1cm, .25cm) $) [right] {Лист};
-				\node [report black] at ($ (bottom left) + (2.5cm, .2cm) $) [right] {\No докум.};
-				\node [report black] at ($ (bottom left) + (4.5cm, .25cm) $) [right] {Подпись};
-				\node [report black] at ($ (bottom left) + (6cm, .25cm) $) [right] {Дата};%
-				%borders
-				\draw[report frame]
-					(bottom right) --
-					(top right) --
-					(top left) --
-					(bottom left) --
-					(bottom right) --
-					(top right);
-				\draw[report frame]
-					($ (bottom left) + (0cm, 15mm) $) --
-					($ (bottom right) + (0cm, 15mm) $);
-				\draw[report frame]
-					($ (bottom left) + (1cm, 0mm) $) --
-					($ (bottom left) + (1cm, 15mm) $);
-				\draw[report frame]
-					($ (bottom left) + (2cm, 0mm) $) --
-					($ (bottom left) + (2cm, 15mm) $);
-				\draw[report frame]
-					($ (bottom left) + (4.5cm, 0mm) $) --
-					($ (bottom left) + (4.5cm, 15mm) $);
-				\draw[report frame]
-					($ (bottom left) + (6cm, 0mm) $) --
-					($ (bottom left) + (6cm, 15mm) $);
-				\draw[report frame]
-					($ (bottom left) + (7cm, 0mm) $) --
-					($ (bottom left) + (7cm, 15mm) $);
-				\draw[report frame]
-					($ (bottom right) + (-1cm, 0mm) $) --
-					($ (bottom right) + (-1cm, 15mm) $);
-				\draw[report thin]
-					($ (bottom left) + (0cm, 5mm) $) --
-					($ (bottom left) + (7cm, 5mm) $);
-				\draw[report thin]
-					($ (bottom left) + (0cm, 10mm) $) --
-					($ (bottom left) + (7cm, 10mm) $);
-				\draw[report thin]
-					($ (bottom right) + (0cm, 10mm) $) --
-					($ (bottom right) + (-1cm, 10mm) $);
-			\end{tikzpicture}
-		\fi
-	}
+\AddEverypageHook{%
+	\ifnum\value{page}>2
+	\thispagestyle{empty}
+		\begin{tikzpicture}[remember picture, overlay]
+			\coordinate (top left)     at ($ (current page.north west) + (2cm,  -.5cm) $);
+			\coordinate (top right)    at ($ (current page.north east) + (-.5cm, -.5cm) $);
+			\coordinate (bottom left)  at ($ (current page.south west) + (2cm,  .5cm) $);
+			\coordinate (bottom right) at ($ (current page.south east) + (-.5cm, .5cm) $);%
+			%plases
+			\node [report black] at ($ (bottom left) + (12cm, .7cm) $) {\large{\@title}};
+			\node [report black] at ($ (bottom right) + (-1cm, 1.2cm) $) [right] {Лист};
+			\node [report black] at ($ (bottom right) + (-5mm, 4mm) $) {\normalsize{\thepage}};
+			\node [report black] at ($ (bottom left) + (0cm, .25cm) $) [right] {Изм.};
+			\node [report black] at ($ (bottom left) + (1cm, .25cm) $) [right] {Лист};
+			\node [report black] at ($ (bottom left) + (2.5cm, .2cm) $) [right] {\No докум.};
+			\node [report black] at ($ (bottom left) + (4.5cm, .25cm) $) [right] {Подпись};
+			\node [report black] at ($ (bottom left) + (6cm, .25cm) $) [right] {Дата};%
+			%borders
+			\draw[report frame]
+				(bottom right) --
+				(top right) --
+				(top left) --
+				(bottom left) --
+				(bottom right) --
+				(top right);
+			\draw[report frame]
+				($ (bottom left) + (0cm, 15mm) $) --
+				($ (bottom right) + (0cm, 15mm) $);
+			\draw[report frame]
+				($ (bottom left) + (1cm, 0mm) $) --
+				($ (bottom left) + (1cm, 15mm) $);
+			\draw[report frame]
+				($ (bottom left) + (2cm, 0mm) $) --
+				($ (bottom left) + (2cm, 15mm) $);
+			\draw[report frame]
+				($ (bottom left) + (4.5cm, 0mm) $) --
+				($ (bottom left) + (4.5cm, 15mm) $);
+			\draw[report frame]
+				($ (bottom left) + (6cm, 0mm) $) --
+				($ (bottom left) + (6cm, 15mm) $);
+			\draw[report frame]
+				($ (bottom left) + (7cm, 0mm) $) --
+				($ (bottom left) + (7cm, 15mm) $);
+			\draw[report frame]
+				($ (bottom right) + (-1cm, 0mm) $) --
+				($ (bottom right) + (-1cm, 15mm) $);
+			\draw[report thin]
+				($ (bottom left) + (0cm, 5mm) $) --
+				($ (bottom left) + (7cm, 5mm) $);
+			\draw[report thin]
+				($ (bottom left) + (0cm, 10mm) $) --
+				($ (bottom left) + (7cm, 10mm) $);
+			\draw[report thin]
+				($ (bottom right) + (0cm, 10mm) $) --
+				($ (bottom right) + (-1cm, 10mm) $);
+		\end{tikzpicture}
+	\fi
 }
 
 \pagestyle{empty}
