--- a/doc.tex
+++ b/doc.tex
@@ -5,14 +5,14 @@
 \providecommand\kurtitle{The kur title will be setted}
 
 \begin{document}
-\input{title.tex}
-\input{introduction.tex}
-\input{task.tex}
-\input{offer.tex}
-\input{project.tex}
-\input{spec.tex}
-\input{schemes.tex}
-\input{drawings.tex}
-\input{picture.tex}
-\input{conclusion.tex}
+	\input{title.tex}
+	\input{src/introduction.tex}
+	\input{src/task.tex}
+	\input{src/offer.tex}
+	\input{src/project.tex}
+	\input{src/spec.tex}
+	\input{src/schemes.tex}
+	\input{src/drawings.tex}
+	\input{src/picture.tex}
+	\input{src/conclusion.tex}
 \end{document}
