--- a/src/task.tex
+++ b/src/task.tex
@@ -80,10 +80,10 @@
 		\subsection{Требования к эксплуатации, удобству технического обслуживания и ремонта}
 			\subsubsection{Требования к стойкости к внешним воздействующим факторам}
 				5.7.1.1 Разрабатываемое изделие должно быть стойким, устойчивым и прочным к воздействию климатических факторов в соответствии с таблицей \ref{taskt1}:
-				\input{taskt1.tex}
+				\input{src/tables/taskt1.tex}
 
 				5.7.1.2 Разрабатываемое изделие должно быть устойчивым к воздействию механических факторов в соответствии с таблицей \ref{taskt2}:
-				\input{taskt2.tex}
+				\input{src/tables/taskt2.tex}
 
 			\subsubsection{Требования к эксплуатационным показателям}
 				5.7.2.1 Разрабатываемый Комплекс должен обеспечивать циклическую работу со следующими параметрами цикла: время загрузки – 30 мин., время обработки – 10 час., время выгрузки – 30 мин., время подготовки – 10 мин.
