Start tech offer

--- a/docsettings.sty
+++ b/docsettings.sty
@@ -6,11 +6,11 @@
 \setmainfont{Times New Roman}
 \setmonofont{Courier New}
 \changefontsizes[14pt]{14pt}
-\newgeometry{left=3cm,right=1cm,top=1.5cm,bottom=2.2cm,bindingoffset=0cm}
+\newgeometry{left=3cm,right=1cm,top=1.5cm,bottom=2.5cm,bindingoffset=0cm}
 \providecommand\No{\char"2116}%{№}%"
 %captions
-\captionsetup[figure]{justification=centerfirst}
-\captionsetup[table]{justification=raggedright}
+\captionsetup[figure]{justification=centerfirst,labelsep=endash,name=Рисунок}
+\captionsetup[table]{justification=raggedright,labelsep=space}
 %titles
 \titleformat{\chapter}[hang]
 	{\vspace{-70pt}\bfseries\Large}{\thechapter\ }{0pt}{}[\vspace{-28pt}]
