--- a/src/tables/taskt1.tex
+++ b/src/tables/taskt1.tex
@@ -1,10 +1,13 @@
 \renewcommand{\arraystretch}{1.5}
 \begin{longtable}[t]{@{\extracolsep{\fill}}|l|l|l|l|}
-	\caption{Воздействие климатических факторов} \label{taskt1} \\
-	\hline
+	\caption{Воздействие климатических факторов} \label{taskt1} \\ \hline
 	{\No} & \shortstack{Наименование\\ воздействующего\\ фактора \vspace{27pt}}
 			  & \shortstack{Характеристика\\ воздействующего\\ фактора \vspace{25pt}}
-				& \shortstack{\\ Максимальное\\ значение (диапазрн\\ возможных измерений)\\ воздействующего\\ фактора}   \\ \hline
+				& \shortstack{\\ Максимальное\\ значение (диапазрн\\ возможных измерений)\\ воздействующего\\ фактора}   \\ \hline \endfirsthead
+	\caption* {Продолжение таблицы \ref{taskt1}}\\ \hline
+	{\No} & \shortstack{Наименование\\ воздействующего\\ фактора \vspace{27pt}}
+			  & \shortstack{Характеристика\\ воздействующего\\ фактора \vspace{25pt}}
+				& \shortstack{\\ Максимальное\\ значение (диапазрн\\ возможных измерений)\\ воздействующего\\ фактора}   \\ \hline \endhead
 	\multicolumn{4}{|c|}{Стойкость}    \\ \hline
 	1     & \shortstack{\\ Температура\\ окружающей среды} & Градусов цельсия                                                             & 5 до 35     \\ \hline
 	2     & Влажность воздуха                           & \shortstack{\\ Относительная\\ влажность при\\ температуре $25^{\circ}$, \%}             & до 70       \\ \hline
