--- a/src/tables/taskt2.tex
+++ b/src/tables/taskt2.tex
@@ -1,6 +1,10 @@
 \begin{longtable}[t]{@{\extracolsep{\fill}}|l|l|l|l|}
-	\caption{Воздействие климатических факторов} \label{taskt2} \\
-	\hline
+	\caption{Воздействие климатических факторов} \label{taskt2} \\ \hline
+	{\No} & \shortstack{Наименование\\ воздействующего\\ фактора \vspace{27pt}}
+			  & \shortstack{Характеристика\\ воздействующего\\ фактора \vspace{25pt}}
+				& \shortstack{\\ Максимальное\\ значение (диапазрн\\ возможных измерений)\\ воздействующего\\ фактора}   \\ \hline
+	\endfirsthead
+	\caption* {Продолжение таблицы \ref{taskt2}}\\ \hline
 	{\No} & \shortstack{Наименование\\ воздействующего\\ фактора \vspace{27pt}}
 			  & \shortstack{Характеристика\\ воздействующего\\ фактора \vspace{25pt}}
 				& \shortstack{\\ Максимальное\\ значение (диапазрн\\ возможных измерений)\\ воздействующего\\ фактора}   \\ \hline \endhead
