--- a/src/project.tex
+++ b/src/project.tex
@@ -1,3 +1,7 @@
 \chapter{Технический проект}
-\section{Техническое описание}
-\section{Расчёты}
+	\section{Техническое описание}
+		\subsection{Назначение}
+		\subsection{Принцип работы}
+	\section{Расчёты}
+		\subsection{Оценка теплового режима}
+		\subsection{Расчет надежности}
