Finish importion old project

--- a/src/project.tex
+++ b/src/project.tex
@@ -1,7 +1,64 @@
 \chapter{Технический проект}
 	\section{Техническое описание}
 		\subsection{Назначение}
+				Устройство предназначения для мониторинга и включения системы оповещения в случае
+			реагирования датчиков движения.
 		\subsection{Принцип работы}
+				К выходам АЦП подключаются датчики движения. К выходу ЦАП подключается
+			управляющее устройство, компаратор.
+
+				Сигналы, полученные от датчиков, поступают на аналоговый сумматор AD1, значение
+			выхода (контакт 6) AD1 преобразуется в цифровой сигнал с помощью DD1. К
+			управляющему устройству DD4 подключаются выходs с преобразователя DD1 и с регистра
+			DD3. Результат сравнения получаемой и хранимой информации подаётся с управляющего
+			устройства DD4 на преобразователь DD2. Сигналы, полученные от DD2 выводится на диоды
+			R1-R10. Необходимые настройки хранятся в регистре DD3.
+
+				Настройки, определяемые производителем, устанавливаются с помощью X1, выходы
+			которого подключены к регистру DD3.
 	\section{Расчёты}
+			Прибор сравнивает значение с датчиков и заданное значение, результаты передаются на
+		выходы управляющего устройства.
+
+			Различные варианты реализации представлены на рисунках ниже
 		\subsection{Оценка теплового режима}
+				Тепловой режим выбирается с помощью диаграммы, приведенной на рисунке \ref{projectp1}. Область
+			разделяемой зоны соответствует каждому способу охлаждения
+			\begin{figure}[ht!]
+				\centering
+				\includegraphics[width=50mm]{src/pictures/projectp1.png}
+				\caption{Диаграмма выбор способа охлаждения}\label{projectp1}
+			\end{figure}
+			\begin{enumerate}
+				\item Естественное;
+				\item Естественное или принудительная конвекция;
+				\item Принудительная конвекция;
+				\item Принудительная конвекция или принудительная жидкостная.
+			\end{enumerate}
+			\subsubsection{Допустимый перегрев нагретой зоны}
+					Для определения зоны необходимо рассчитать $\bigtriangleup T_{oc}$(допустимый перегрев нагретой зоны): \\
+				$\bigtriangleup T_{oc} = T_{min} - T_{oc}$
+				, где $T_{min}$ – допустимая температура нагретой зоны,
+				$T_{oc}$ – максимальная температура окружающей среды.
+
+					Расчет поверхности нагретой зоны \\
+				$S_k = 2 * (L_1 * L_2 + (L_1 + L_2) * L_3 * K_3)$
+				, где $L_1$ – длина, м; $L_1 = 0,12$
+				, $L_2$ – ширина, м; $L_2 = 0,09$
+				, $L_3$ – высота, м; $L_3 = 0,05$
+				, $K_3$ – коэффициент заполнения, равный отношению объема функциональных и монтажных элементов внутри объема корпуса к его внутреннему объему.
+			\subsubsection{Плотность теплового потока}
+				$q = {P * K}/{S_k}$
+				, где Кn = 1 при н.у. (760 мм. рт.ст);Р – суммарная тепловая мощность.
+			\subsubsection{Расчет}
+				$\bigtriangleup T_{oc} = 70 - 35 = 35$ \\
+				$S_k = 2 * (0,12 * 0,09 + (0,12 + 0,09) * 0,05 * 0,0116) = 0,0214 \textup{м}^2$ \\
+				$q = {4}/0,0214 = 201,34$ $\textup{Вт/м}^2$ \\
+				$lg(201,34) = 2,3$ $\textup{Вт/м}^2$
+
+				Из полученных расчетов можно сделать вывод, что прибору не требуется дополнительное охлаждение.
 		\subsection{Расчет надежности}
+			Для расчета средней наработки на отказ используется формула 4 и данные из таблицы \ref{projectt1}, полученные из справочника.
+			$T_{cp} = 1/{\Sigma\lambda_i}$, 
+			$T_{cp} = 366300$ часов.
+			\input{src/tables/projectt1.tex}
